<resources>
    <string name="app_name">Chat App</string>
    <string name="splash">Splash</string>
    <string name="login">Login</string>
    <string name="policies_and_terms">I agree to the policies and terms</string>
    <string name="registry">Sign Up</string>
    <string name="full_name">Full name <font color='#FF0000'>*</font></string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="had_a_account">Had a account? Login</string>
    <string name="dont_have_an_account">Don\'t have a account? Sign Up</string>
    <string name="policies">policies</string>
    <string name="terms">terms</string>
    <string name="messages">Messages</string>
    <string name="friends">Friends</string>
    <string name="profile">Profile</string>
    <string name="search_messages">Search message…</string>
    <string name="name_demo">Name Demo</string>
    <string name="time_demo">12:00</string>
    <string name="message_demo">Message demo</string>
    <string name="search_friends">Search friend…</string>
    <string name="add_friend">Add friend</string>
    <string name="all">All</string>
    <string name="request">Request</string>
    <string name="email_demo">alexcao194@gmail.com</string>
    <string name="languages">Languages</string>
    <string name="logout">Logout</string>
    <string name="version_demo">1.0.0</string>
    <string name="version">Version</string>
    <string name="notifications">Notifications</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save">Save</string>
    <string name="birthday">Birthday</string>
    <string name="sign_up_successfully">Sign up successfully, please check your mail</string>
    <string name="email_already_exists">Email already exists</string>
    <string name="email_or_password_is_empty">Email or password is empty</string>
    <string name="email_or_password_is_incorrect">Email or password is incorrect</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="email_is_empty">Email is empty</string>
    <string name="email_is_invalid">Email is invalid</string>
    <string name="name_is_empty">Name is empty</string>
    <string name="password_is_empty">Password is empty</string>
    <string name="password_is_to_weak">Password is too weak</string>
    <string name="ok">OK</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="a">A</string>
    <string name="friend_request">Friend Request</string>
    <string name="friend_added">Friend Added</string>
    <string name="there_is_no_result">There is no result</string>
    <string name="friend_request_sent">Friend request was sent</string>
    <string name="friend_request_accepted">Friend request was accepted</string>
    <string name="friend_request_canceled">Friend request was canceled</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="phone_number_is_empty">Phone number is empty</string>
    <string name="enter_message">Enter message…</string>
    <string name="password_is_incorrect">Password is incorrect</string>
    <string name="email_is_not_registered">Email is not registered</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="english">English</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="change_language_toast">Please restart app to apply change language</string>
    <string name="yesterday">Yesterday</string>
    <string name="today">Today</string>
    <string name="same_minute">empty</string>
    <string name="sent_a_photo">sent a photo</string>
    <string name="sent_a_emoji">sent a emoji</string>
    <string name="you">You</string>
    <string name="phone_number_is_invalid">Phone number is invalid</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="messages_matched">matched messages</string>
    <string name="not_friend">Not friend</string>
</resources>