<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_avatar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/ic_avatar_unknown"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/name_demo"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="@id/iv_avatar"
            app:layout_constraintBottom_toBottomOf="@id/iv_avatar"
            app:layout_constraintStart_toEndOf="@id/iv_avatar"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_add_new_friend"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="@drawable/button_add_friend"
            android:paddingHorizontal="16dp"
            android:text="@string/add_friend"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:visibility="invisible"
            app:layout_constraintTop_toTopOf="@id/iv_avatar"
            app:layout_constraintBottom_toBottomOf="@id/iv_avatar"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_accept"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:paddingHorizontal="16dp"
            android:background="@drawable/button_add_friend"
            android:layout_gravity="center"
            android:visibility="invisible"
            android:text="@string/accept"
            app:layout_constraintTop_toTopOf="@id/iv_avatar"
            app:layout_constraintBottom_toBottomOf="@id/iv_avatar"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:paddingHorizontal="16dp"
            android:background="@drawable/button_add_friend"
            android:layout_gravity="center"
            android:visibility="invisible"
            android:text="@string/cancel"
            app:layout_constraintTop_toTopOf="@id/iv_avatar"
            app:layout_constraintBottom_toBottomOf="@id/iv_avatar"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>