<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.home.profile.EditProfileFragment">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/img_header"
                app:layout_constraintTop_toTopOf="parent"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_profile_background"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="120dp"
                android:src="@drawable/img_edit_profile_background"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_previous"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="60dp"
                android:layout_marginStart="10dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_profile"
                app:layout_constraintTop_toTopOf="@+id/btn_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="16sp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:layout_marginEnd="10dp"
                android:background="@color/transparent"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btn_back"/>


            <androidx.cardview.widget.CardView
                android:id="@+id/cv_profile"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="30dp"
                app:cardCornerRadius="100dp"
                app:layout_constraintTop_toTopOf="@+id/iv_profile_background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_profile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_avatar_unknown" />
            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_change_avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="10dp"
                android:layout_marginTop="105dp"
                android:layout_marginEnd="130dp"
                android:background="@drawable/ic_camera"
                app:layout_constraintCircle="@+id/cv_profile"
                app:layout_constraintCircleRadius="60dp"
                app:layout_constraintCircleAngle="135" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="61dp"
                android:text="@string/full_name"
                android:textColor="#999999"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/cv_profile"
                app:layout_constraintStart_toStartOf="parent"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="7dp"
                android:drawableEnd="@drawable/ic_user"
                android:textColor="@color/black"
                android:textColorHint="#676767"
                android:maxLines="1"
                android:inputType="textPersonName"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/tv_name"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="40dp"
                android:text="@string/phone_number"
                android:textColor="#999999"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/et_name"
                app:layout_constraintStart_toStartOf="parent"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="7dp"
                android:drawableEnd="@drawable/ic_telephone"
                android:textColor="@color/black"
                android:textColorHint="#676767"
                android:textSize="18sp"
                android:maxLines="1"
                android:inputType="phone"
                app:layout_constraintTop_toBottomOf="@+id/tv_phone_number"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_birthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="40dp"
                android:text="@string/birthday"
                android:textColor="#999999"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/et_phone_number"
                app:layout_constraintStart_toStartOf="parent"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="7dp"
                android:drawableEnd="@drawable/ic_birthday_cake"
                android:inputType="date"
                android:hint="@string/dd_mm_yyyy"
                android:textColor="@color/black"
                android:textColorHint="#676767"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/tv_birthday"
                />

            <include
                android:id="@+id/include_progress"
                layout="@layout/progress_layout" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>